@@ -42,14 +42,5 @@ namespace Test
   {
   }
 
-
-  template <typename I>
-  void
-  ORBInitializer<I>::post_init(PortableInterceptor::ORBInitInfo*
-                              ACE_ENV_ARG_DECL_WITH_DEFAULTS)
-    ACE_THROW_SPEC ((CORBA::SystemException))
-  {
-  }
-
 }
 #endif /* ORBINITIALIZER_T_CPP */
